// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders the primary button 1`] = `
.emotion-0 {
  height: 48px;
  margin: 0;
  border: none;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  font-weight: 600;
  font-size: 18px;
  padding: 0 30px;
  border-radius: var(--border-radius-1);
  background-color: var(--maximeheckel-colors-brand);
  color: hsla(var(--palette-gray-00), 100%);
  min-width: 150px;
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  outline: 2px solid var(--maximeheckel-colors-brand);
  background-color: var(--maximeheckel-colors-foreground);
}

<body>
  <div>
    <button
      class="emotion-0 emotion-1"
    >
      Test
    </button>
  </div>
</body>
`;

exports[`Button renders the secondary button 1`] = `
.emotion-0 {
  height: 48px;
  margin: 0;
  border: none;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  font-weight: 600;
  font-size: 18px;
  padding: 0 30px;
  border-radius: var(--border-radius-1);
  background-color: transparent;
  color: var(--maximeheckel-colors-brand);
  border: 2px solid var(--maximeheckel-colors-brand);
  min-width: 150px;
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  outline: 2px solid var(--maximeheckel-colors-brand);
  background-color: var(--maximeheckel-colors-foreground);
}

<body>
  <div>
    <button
      class="emotion-0 emotion-1"
    >
      Test
    </button>
  </div>
</body>
`;

exports[`Button renders the tertiary button 1`] = `
.emotion-0 {
  height: 48px;
  margin: 0;
  border: none;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  font-weight: 600;
  font-size: 18px;
  padding: 0 30px;
  border-radius: var(--border-radius-1);
  background-color: transparent;
  color: var(--maximeheckel-colors-brand);
  min-width: inherited;
  padding: 0px;
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  outline: 2px solid var(--maximeheckel-colors-brand);
  background-color: var(--maximeheckel-colors-foreground);
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  top: 96%;
  left: 0;
  right: 0;
  height: 2px;
  background-color: var(--maximeheckel-colors-brand);
  -webkit-transform: scaleX(0);
  -moz-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.25s ease-in;
  transition: transform 0.25s ease-in;
  transform-origin: right center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover::after {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  transform-origin: left center;
}

<body>
  <div>
    <button
      class="emotion-0 emotion-1"
    >
      Test
    </button>
  </div>
</body>
`;
